# kdb_challenge

./: CHALLENGE.md  Dockerfile  README.md  pyproject.toml
kdb_challenge/: engine.py  main.py  models.py  test.parquet
